# kosmos

./: Cargo.toml  Makefile  README.md  linker.ld
.cargo/: config.toml
grub/boot/grub/: grub.cfg
iso/boot/grub/: grub.cfg
src/: allocator.rs  bootinfo.rs  gdt.rs  interrupts.rs  kernel.rs  lib.rs  memory.rs  serial.rs  shell.rs  system.rs  timer.rs  vga.rs
src/asm/boot/: header.asm  main.asm  main64.asm
src/task/: executor.rs  keyboard.rs  mod.rs  shell.rs  simple_executor.rs
