[package]
name = "kosmos"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = { version = "1.0", features = ["spin_no_std"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[lib]
name = "kosmos"
path = "src/kernel.rs"
crate-type = ["staticlib"]

[profile.dev]


[profile.release]
panic = "abort"
lto = true
opt-level = "z"
